[package]
name = "bukvalno"
version = "0.2.0"
edition = '2021'
description = "A cli tool for converting images to ascii art"
readme = "README.md"
repository = "https://github.com/emilsharkov/bukvalno"
license = "MIT"
license-file = "LICENSE.txt"
keywords = ["ascii","art","image"]

[dependencies]
clap = "4.5.23"
image = "0.25.5"
